welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:77: error: value Blue is not a member of object java.awt.Color
  faireFleur(Color.Blue)
                   ^FlowerCase:94: error: Unit does not take parameters
  for (compteur6 <- 1 to 8) {recule()()}
                                     ^FlowerCase:97: error: Unit does not take parameters
  for (compteur7 <- 1 to 5) {avance()()}
                                     ^FlowerCase:109: error: Unit does not take parameters
  for (compteur7 <- 1 to 6) {recule()()}
                                     ^